--- a/ScorePredict/notebooks/DataExtraction.ipynb
+++ b/ScorePredict/notebooks/DataExtraction.ipynb
@@ -2,41 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "id": "4b9d3347-22ca-4eab-9af6-474308093ed0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[11/09/24 18:21:25] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> No custom team name replacements found. You can configure these in       <a href=\"file://C:\\Users\\acer\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\soccerdata\\_config.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">_config.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file://C:\\Users\\acer\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\soccerdata\\_config.py#87\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">87</span></a>\n",
-       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         C:\\Users\\acer\\soccerdata\\config\\teamname_replacements.json.              <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">             </span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m[11/09/24 18:21:25]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m No custom team name replacements found. You can configure these in       \u001b]8;id=557748;file://C:\\Users\\acer\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\soccerdata\\_config.py\u001b\\\u001b[2m_config.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=910519;file://C:\\Users\\acer\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\soccerdata\\_config.py#87\u001b\\\u001b[2m87\u001b[0m\u001b]8;;\u001b\\\n",
-       "\u001b[2;36m                    \u001b[0m         C:\\Users\\acer\\soccerdata\\config\\teamname_replacements.json.              \u001b[2m             \u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> No custom league dict found. You can configure additional leagues in    <a href=\"file://C:\\Users\\acer\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\soccerdata\\_config.py\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">_config.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file://C:\\Users\\acer\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\soccerdata\\_config.py#177\" target=\"_blank\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">177</span></a>\n",
-       "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">                    </span>         C:\\Users\\acer\\soccerdata\\config\\league_dict.json.                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">              </span>\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "\u001b[2;36m                   \u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m No custom league dict found. You can configure additional leagues in    \u001b]8;id=126110;file://C:\\Users\\acer\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\soccerdata\\_config.py\u001b\\\u001b[2m_config.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=803222;file://C:\\Users\\acer\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\soccerdata\\_config.py#177\u001b\\\u001b[2m177\u001b[0m\u001b]8;;\u001b\\\n",
-       "\u001b[2;36m                    \u001b[0m         C:\\Users\\acer\\soccerdata\\config\\league_dict.json.                       \u001b[2m              \u001b[0m\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -82,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 51,
    "id": "40e0b85f-483f-45fa-b02e-261512331d6d",
    "metadata": {},
    "outputs": [],
@@ -93,19 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "1f914112-889b-4bb8-9d0a-0c1926818998",
    "metadata": {},
    "outputs": [],
    "source": [
-    "league = \"La_Liga\"\n",
+    "league = \"EPL\"\n",
     "\n",
     "league_data = client.league(league=league).get_match_data(season=\"2024\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "id": "af454b97-6c43-45fa-9963-da982c01e931",
    "metadata": {},
    "outputs": [],
@@ -132,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "9f010c70-7e04-4e5e-9071-2dbb764c5cb9",
    "metadata": {},
    "outputs": [
@@ -140,139 +109,112 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "26982\n",
-      "26983\n",
-      "26984\n",
-      "26985\n",
-      "26986\n",
-      "26987\n",
-      "26988\n",
-      "26989\n",
-      "26990\n",
-      "26991\n",
-      "26992\n",
-      "26993\n",
-      "26994\n",
-      "26995\n",
-      "26996\n",
-      "26997\n",
-      "26998\n",
-      "26999\n",
-      "27000\n",
-      "27001\n",
-      "27002\n",
-      "27003\n",
-      "27004\n",
-      "27005\n",
-      "27006\n",
-      "27008\n",
-      "27009\n",
-      "27010\n",
-      "27011\n",
-      "27012\n",
-      "27013\n",
-      "27014\n",
-      "27015\n",
-      "27016\n",
-      "27017\n",
-      "27018\n",
-      "27019\n",
-      "27020\n",
-      "27021\n",
-      "27024\n",
-      "27026\n",
-      "27022\n",
-      "27029\n",
-      "27031\n",
-      "27025\n",
-      "27028\n",
-      "27027\n",
-      "27023\n",
-      "27030\n",
-      "27045\n",
-      "27007\n",
-      "27047\n",
-      "27035\n",
-      "27039\n",
-      "27040\n",
-      "27038\n",
-      "27041\n",
-      "27034\n",
-      "27032\n",
-      "27037\n",
-      "27036\n",
-      "27033\n",
-      "27046\n",
-      "27050\n",
-      "27051\n",
-      "27044\n",
-      "27043\n",
-      "27042\n",
-      "27049\n",
-      "27048\n",
-      "27057\n",
-      "27059\n",
-      "27060\n",
-      "27055\n",
-      "27056\n",
-      "27054\n",
-      "27052\n",
-      "27061\n",
-      "27053\n",
-      "27058\n",
-      "27065\n",
-      "27071\n",
-      "27062\n",
-      "27069\n",
-      "27070\n",
-      "27063\n",
-      "27066\n",
-      "27064\n",
-      "27068\n",
-      "27067\n",
-      "27078\n",
-      "27072\n",
-      "27079\n",
-      "27076\n",
-      "27075\n",
-      "27077\n",
-      "27073\n",
-      "27080\n",
-      "27074\n",
-      "27081\n",
-      "27091\n",
-      "27089\n",
-      "27090\n",
-      "27087\n",
-      "27085\n",
-      "27086\n",
-      "27082\n",
-      "27084\n",
-      "27088\n",
-      "27083\n",
-      "27097\n",
-      "27096\n",
-      "27095\n",
-      "27098\n"
-     ]
-    },
-    {
-     "ename": "InvalidMatch",
-     "evalue": "27098 is not a valid match",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\understatapi\\endpoints\\match.py:64\u001b[0m, in \u001b[0;36mMatchEndpoint._get_data\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     63\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 64\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_request_url(url\u001b[38;5;241m=\u001b[39murl, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m     65\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m HTTPError \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\understatapi\\endpoints\\base.py:75\u001b[0m, in \u001b[0;36mBaseEndpoint._request_url\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m     74\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msession\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[1;32m---> 75\u001b[0m \u001b[43mres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraise_for_status\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     76\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m res\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\requests\\models.py:943\u001b[0m, in \u001b[0;36mResponse.raise_for_status\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    942\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m http_error_msg:\n\u001b[1;32m--> 943\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m HTTPError(http_error_msg, response\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m)\n",
-      "\u001b[1;31mHTTPError\u001b[0m: 404 Client Error: Not Found for url: https://understat.com/match/27098",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mInvalidMatch\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m match_datetime \u001b[38;5;241m<\u001b[39m\u001b[38;5;241m=\u001b[39m current_timestamp:\n\u001b[0;32m     11\u001b[0m     \u001b[38;5;28mprint\u001b[39m(row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mid\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m---> 12\u001b[0m     shot_data \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmatch\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmatch\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mid\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_shot_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m     all_shot_data\u001b[38;5;241m.\u001b[39mappend(shot_data)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\understatapi\\endpoints\\match.py:79\u001b[0m, in \u001b[0;36mMatchEndpoint.get_shot_data\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_shot_data\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Dict[\u001b[38;5;28mstr\u001b[39m, Any]:\n\u001b[0;32m     73\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     74\u001b[0m \u001b[38;5;124;03m    Get shot level data for a match\u001b[39;00m\n\u001b[0;32m     75\u001b[0m \n\u001b[0;32m     76\u001b[0m \u001b[38;5;124;03m    :param kwargs: Keyword argument to pass to\u001b[39;00m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;124;03m        :meth:`understatapi.endpoints.base.BaseEndpoint._get_response`\u001b[39;00m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 79\u001b[0m     res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_data(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m     80\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparser\u001b[38;5;241m.\u001b[39mget_shot_data(html\u001b[38;5;241m=\u001b[39mres\u001b[38;5;241m.\u001b[39mtext)\n\u001b[0;32m     81\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m data\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\understatapi\\endpoints\\match.py:66\u001b[0m, in \u001b[0;36mMatchEndpoint._get_data\u001b[1;34m(self, **kwargs)\u001b[0m\n\u001b[0;32m     64\u001b[0m     response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_request_url(url\u001b[38;5;241m=\u001b[39murl, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m     65\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m HTTPError \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m---> 66\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m InvalidMatch(\n\u001b[0;32m     67\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmatch\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m is not a valid match\u001b[39m\u001b[38;5;124m\"\u001b[39m, match\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmatch\n\u001b[0;32m     68\u001b[0m     ) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m     70\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "\u001b[1;31mInvalidMatch\u001b[0m: 27098 is not a valid match"
+      "26602\n",
+      "26603\n",
+      "26604\n",
+      "26605\n",
+      "26606\n",
+      "26607\n",
+      "26608\n",
+      "26609\n",
+      "26610\n",
+      "26611\n",
+      "26612\n",
+      "26613\n",
+      "26614\n",
+      "26615\n",
+      "26616\n",
+      "26617\n",
+      "26618\n",
+      "26619\n",
+      "26620\n",
+      "26621\n",
+      "26622\n",
+      "26623\n",
+      "26624\n",
+      "26625\n",
+      "26626\n",
+      "26627\n",
+      "26628\n",
+      "26629\n",
+      "26630\n",
+      "26631\n",
+      "26632\n",
+      "26633\n",
+      "26634\n",
+      "26635\n",
+      "26636\n",
+      "26637\n",
+      "26638\n",
+      "26639\n",
+      "26640\n",
+      "26641\n",
+      "26642\n",
+      "26643\n",
+      "26644\n",
+      "26645\n",
+      "26646\n",
+      "26647\n",
+      "26648\n",
+      "26649\n",
+      "26650\n",
+      "26651\n",
+      "26652\n",
+      "26653\n",
+      "26654\n",
+      "26655\n",
+      "26656\n",
+      "26657\n",
+      "26658\n",
+      "26659\n",
+      "26660\n",
+      "26661\n",
+      "26662\n",
+      "26663\n",
+      "26664\n",
+      "26665\n",
+      "26666\n",
+      "26667\n",
+      "26669\n",
+      "26668\n",
+      "26670\n",
+      "26671\n",
+      "26672\n",
+      "26673\n",
+      "26674\n",
+      "26675\n",
+      "26676\n",
+      "26678\n",
+      "26680\n",
+      "26681\n",
+      "26679\n",
+      "26677\n",
+      "26682\n",
+      "26683\n",
+      "26684\n",
+      "26685\n",
+      "26686\n",
+      "26687\n",
+      "26688\n",
+      "26689\n",
+      "26690\n",
+      "26691\n",
+      "26694\n",
+      "26692\n",
+      "26695\n",
+      "26696\n",
+      "26698\n",
+      "26699\n",
+      "26701\n",
+      "26700\n",
+      "26697\n",
+      "26693\n",
+      "26702\n",
+      "26706\n",
+      "26710\n",
+      "26711\n",
+      "26703\n",
+      "26707\n"
      ]
     }
    ],
@@ -294,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "8c7d1f47-0fa5-43e0-86c0-b1b5a5362047",
    "metadata": {},
    "outputs": [],
@@ -323,12 +265,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "id": "2b0b1a5a-eeb3-40b9-b514-c7eb1296103b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "compiled_shot_df.to_csv('C:/Users/acer/Documents/GitHub/IndianCitizen/ScorePredict/Data/LaLiga/2024-25/shot_data.csv')"
+    "compiled_shot_df.to_csv('C:/Users/acer/Documents/GitHub/IndianCitizen/ScorePredict/Data/PL/2024-25/shot_data.csv')"
    ]
   },
   {
