--- a/jobs/ShotsDataExtraction-28ffe02f-c6ad-40fe-bf6f-8228d564c9d7/ShotsDataExtraction.ipynb
+++ b/jobs/ShotsDataExtraction-28ffe02f-c6ad-40fe-bf6f-8228d564c9d7/ShotsDataExtraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "4b9d3347-22ca-4eab-9af6-474308093ed0",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "id": "2d5583e7",
    "metadata": {},
    "outputs": [],
@@ -95,21 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
    "id": "1f914112-889b-4bb8-9d0a-0c1926818998",
    "metadata": {},
    "outputs": [],
    "source": [
     "## EPL , Bundesliga , Serie_A , Ligue_1 , La_Liga\n",
-    "league = \"Serie_A\"\n",
-    "season = \"2024\"\n",
+    "#league = \"EPL\"\n",
+    "#season = \"2024\"\n",
     "\n",
     "league_data = client.league(league=league).get_match_data(season=season)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "af454b97-6c43-45fa-9963-da982c01e931",
    "metadata": {},
    "outputs": [],
@@ -136,19 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9f010c70-7e04-4e5e-9071-2dbb764c5cb9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27442 is not a valid match\n",
-      "27497 is not a valid match\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_shot_data = []\n",
     "\n",
@@ -170,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "8c7d1f47-0fa5-43e0-86c0-b1b5a5362047",
    "metadata": {},
    "outputs": [],
@@ -199,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "id": "e2f52b8e-42f5-4c4e-a6d6-2e143084c72d",
    "metadata": {},
    "outputs": [],
@@ -209,17 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "674665c4-9ac0-44aa-aaa1-82386a101187",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "compiled_shot_df = compiled_shot_df.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "id": "faf3ef6b-ba9b-465d-a6a8-4fb7e05115bc",
    "metadata": {},
    "outputs": [],
@@ -239,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "id": "2b0b1a5a-eeb3-40b9-b514-c7eb1296103b",
    "metadata": {},
    "outputs": [
