--- a/jobs/ShotsDataExtraction-99d4f122-6027-4320-92c6-98d549cfe78a/ShotsDataExtraction.ipynb
+++ b/jobs/ShotsDataExtraction-99d4f122-6027-4320-92c6-98d549cfe78a/ShotsDataExtraction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "4b9d3347-22ca-4eab-9af6-474308093ed0",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 77,
    "id": "2d5583e7",
    "metadata": {},
    "outputs": [],
@@ -95,21 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
    "id": "1f914112-889b-4bb8-9d0a-0c1926818998",
    "metadata": {},
    "outputs": [],
    "source": [
     "## EPL , Bundesliga , Serie_A , Ligue_1 , La_Liga\n",
-    "league = \"EPL\"\n",
-    "season = \"2024\"\n",
+    "#league = \"EPL\"\n",
+    "#season = \"2024\"\n",
     "\n",
     "league_data = client.league(league=league).get_match_data(season=season)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "af454b97-6c43-45fa-9963-da982c01e931",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9f010c70-7e04-4e5e-9071-2dbb764c5cb9",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "id": "8c7d1f47-0fa5-43e0-86c0-b1b5a5362047",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "id": "e2f52b8e-42f5-4c4e-a6d6-2e143084c72d",
    "metadata": {},
    "outputs": [],
@@ -200,17 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "674665c4-9ac0-44aa-aaa1-82386a101187",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "compiled_shot_df = compiled_shot_df.drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "id": "faf3ef6b-ba9b-465d-a6a8-4fb7e05115bc",
    "metadata": {},
    "outputs": [],
@@ -230,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 78,
    "id": "2b0b1a5a-eeb3-40b9-b514-c7eb1296103b",
    "metadata": {},
    "outputs": [
@@ -239,14 +229,6 @@
      "output_type": "stream",
      "text": [
       "Upsert to table 'understat_shots_tb' completed successfully.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_11300\\1035992783.py:51: RemovedIn20Warning: Deprecated API features detected! These feature(s) are not compatible with SQLAlchemy 2.0. To prevent incompatible upgrades prior to updating applications, ensure requirements files are pinned to \"sqlalchemy<2.0\". Set environment variable SQLALCHEMY_WARN_20=1 to show all deprecation warnings.  Set environment variable SQLALCHEMY_SILENCE_UBER_WARNING=1 to silence this message. (Background on SQLAlchemy 2.0 at: https://sqlalche.me/e/b8d9)\n",
-      "  conn.execute(upsert_query)\n"
      ]
     }
    ],
